@@ -10,8 +10,8 @@ distribution_type:   module
 requires:     
     Archive::Tar:                  0
     Archive::Zip:                  0
-    Moose:                         0
-    MooseX::Types::Path::Class:    0
+    Moo:                           0
+    Types::Path::Tiny:             0
     Test::More:                    0
 meta-spec:
     url:     http://module-build.sourceforge.net/META-spec-v1.3.html
