@@ -11,8 +11,8 @@ WriteMakefile(
     PREREQ_PM    => {
         'Archive::Tar'               => '0',
         'Archive::Zip'               => '0',
-        'Moose'                      => '0',
-        'MooseX::Types::Path::Class' => '0',
+        'Moo'                        => '0',
+        'Types::Path::Tiny'          => '0',
         'Test::More'                 => '0',
     }
 );
